<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">yanniks.de App</string>
    <string name="copyright">App by Yannik Ehlert</string>
    <string name="blogposts">Blog news</string>
    <string name="snetworks">Social Networks</string>
    <string name="impress">Imprint</string>
    <string name="source">This app released under GNU GPL v3 license. The code is available at GitHub and at BitBucket.</string>
    <string name="desclogo" translatable="false">yanniks.de Logo</string>
    <string name="about">The new yanniks.de is a developer website with different topics: Android, iOS, Mac and Linux tutorials are part of the new yanniks.de concept. Have fun!</string>
    <string name="pref_name">RSS Settings</string>
    <string name="app_title">yanniks.de RSS reader</string>
    <string name="app_description">The RSS reader for the yanniks.de Android App</string>
    <string name="email">Email: kontakt@yanniks.de</string>
    <string name="website">http://yanniks.de</string>
    <string name="github" translatable="false">GitHub: https://github.com/yanniks/yanniksdeapp-android</string>
    <string name="bitbucket" translatable="false">BitBucket: https://bitbucket.org/yanniks/yanniksdeapp-android</string>
    <string name="contact">Twitter: @yanniksde</string>
    <string name="version">Version</string>
    <string name="powered">RSS reader powered by FeedER</string>
    <string name="close">Close</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="no_connection">No Internet connection!</string>
    <string name="favorites">Favorites</string>
    <string name="pubdate_format_pattern">E MMM dd, yyyy - h:mmaa</string>
    <string name="update_format_pattern">MM/dd/yyyy k:mm</string>
    <string name="updated">Updated</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>  
    <string name="loading">Loading...</string>
    <string name="updating">Updating information</string>
    <string name="downloading">Please wait while downloading...</string>
    <string name="ctx_menu_title">Options</string>
    <string name="add_fav">Add to favorites</string>
    <string name="add_fav_msg">The item has been added to the favorites</string>
    <string name="remove_fav">Remove from favorites</string>
    <string name="remove_fav_confirmation">The date of this item has expired, the item will be discarded from the application. Are you sure you want to remove it from the favorites?</string>
    <string name="remove_fav_msg">The item has been removed from the favorites</string>
    <string name="no_fav_msg">You have no item in your favorites</string>
    <string name="share">Share article</string>
    <string name="share_subject">I have shared a new item via the yanniks.de App</string>
    <string name="last_update">Last update</string>
    <string name="next_item">Next item</string>
    <string name="previous_item">Previous item</string>
    <string name="read_online">Read online</string>
    <string name="menu_home">Home</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_channels">Channels</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_about">About the app</string>
    <string name="new_item_msg">There are new items</string>
    <string name="no_new_item_msg">There is no new item</string>
    <string name="no_new_fav_item_msg">There is no favorite item</string>
    <string name="pref_start_channel_title">Default channel</string>
    <string name="pref_start_channel_descr">The channel to display by default when you start the application</string>
    <string name="pref_item_view_title">Offline/Online reading</string>
    <string name="pref_item_view_descr">Choose how you want to read the items</string>
    <string name="pref_max_items_title">Items per channel</string>
    <string name="pref_max_items_descr">The maximum number of items to display in a channel</string>
    <string name="pref_max_hours_title">Discard items</string>
    <string name="pref_max_hours_descr">Discard automatically items older than the specified period</string>
    <string name="pref_update_period_title">Update channels</string>
    <string name="pref_update_period_descr">Update the items of the channels after the specified period</string>
    <string name="app_pref_default_tab_feed_id">1</string>
    <string name="app_pref_default_splash_screen_duration">0</string>
    <string name="yannikehlert">- app and website developed by Yannik Ehlert</string>
    <string name="feeder">- RSS Reader FeedER by rajithd</string>
    <string name="devmode">Developer mode</string>
    <string name="webview">Web link</string>
    <string name="oclock">o\'clock</string>
    <string name="webimprint">Imprint (online)</string>
    <string name="cydia">Cydia repo</string>
    <string name="cdporter">CD porter</string>
    <string name="newmark">NEU</string>
    <string name="license">Released under GNU GPL v3</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="navigation">Navigation</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >@string/menu_home</item>
        <item>@string/blogposts</item>
        <item >@string/impress</item>
        <item >@string/cydia</item>
        <item >@string/cdporter</item>
        <item>@string/cyandream</item>
    </string-array>
    <string-array name="nav_drawer_items_title">
        <item >@string/app_name</item>
        <item>@string/blogposts</item>
        <item >@string/impress</item>
        <item >@string/cydia</item>
        <item >@string/cdporter</item>
        <item>@string/app_name</item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_blog</item>
        <item>@drawable/ic_imprint</item>
        <item>@drawable/ic_cydia</item>
        <item>@drawable/ic_cyandream</item>
    </array>

    <string name="cyandream" translatable="false">CyanDream</string>
    <string name="learnmore">Learn more</string>
    <string name="learnmore_title">Learn more at...</string>
    <string name="welcomelevel">Welcome on the next level of custom ROMs.</string>
    <string name="lang">en</string>
    <string name="xda" translatable="false">XDA-Developers</string>
    <string name="androidhilfe" translatable="false">Android-Hilfe.de</string>
    <string name="androidpit" translatable="false">AndroidPIT.de</string>
    <string name="notsupported">Your device is not supported! :\'(</string>
</resources>