<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xda"
        android:id="@+id/xda"
        android:onClick="xda"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidhilfe"
        android:id="@+id/androidhilfe"
        android:onClick="androidhilfe"
        android:layout_below="@+id/xda"
        android:layout_alignLeft="@+id/xda"
        android:layout_alignStart="@+id/xda"
        android:layout_alignRight="@+id/xda"
        android:layout_alignEnd="@+id/xda" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidpit"
        android:id="@+id/androidpit"
        android:onClick="androidpit"
        android:layout_below="@+id/androidhilfe"
        android:layout_alignLeft="@+id/xda"
        android:layout_alignStart="@+id/xda"
        android:layout_alignRight="@+id/xda"
        android:layout_alignEnd="@+id/xda" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notsupported"
        android:visibility="invisible"
        android:id="@+id/notsupported"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>